# s3-cache

./: .bazelrc  .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  build.rs  configuration.json
.github/workflows/: rust.yml
cache/: BUILD  Cargo.toml
cache/src/: lib.rs  main.rs
cache/src/cmd/: cmd.rs
cache/src/load/: load_from_disk.rs
cache/src/lru/: disk_lru.rs  mod.rs
cache/src/proxy/: mod.rs  proxy.rs  proxy_factory.rs  s3_proxy.rs
cache/src/server/: http_server.rs
protos/: BUILD  Cargo.toml  build.rs  configuration.proto  lib.rs  mod.rs
src/: lib.rs  main.rs
src/load/: load_from_disk.rs  mod.rs
src/lru/: disk_lru.rs
src/protos/: configuration.rs
src/proxy/: proxy_factory.rs  s3_proxy.rs
src/server/: http_server.rs
