[package]
name = "protos"
version = "0.0.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "protos"
path = "lib.rs"

[dependencies]
protobuf = { workspace = true }

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"